--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
 			</exclusions>
 		</dependency>
 		
+		<!-- Apache File Upload 관련 클래스 사용 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		
 		<!-- mybatis -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
